--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "eslint-plugin-jest": "^23.8.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-dom": "latest",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-dom": "latest"
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
